--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -10,6 +10,9 @@
   content: "";
   height: 0;
 }
+:focus {
+  outline: 0;
+}
 .fr-element,
 .fr-element:focus {
   outline: 0px solid transparent;
@@ -674,6 +677,9 @@ body.prevent-scroll.fr-mobile {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.fr-popup .fr-input-focus {
+  background: #f5f5f5;
+}
 .fr-popup.fr-above {
   margin-top: -10px;
   border-top: 0;
@@ -1309,7 +1315,8 @@ textarea.fr-code {
   padding: 8px 0;
   position: relative;
 }
-.fr-popup .fr-colors-tabs .fr-colors-tab:hover {
+.fr-popup .fr-colors-tabs .fr-colors-tab:hover,
+.fr-popup .fr-colors-tabs .fr-colors-tab:focus {
   color: #1e88e5;
 }
 .fr-popup .fr-colors-tabs .fr-colors-tab[data-param1="background"]::after {
@@ -1382,7 +1389,7 @@ textarea.fr-code {
   cursor: default;
 }
 .fr-popup .fr-color-set > span:hover,
-.fr-popup .fr-color-set > span.fr-selected-color {
+.fr-popup .fr-color-set > span:focus {
   outline: 1px solid #222222;
   z-index: 2;
 }
@@ -1442,6 +1449,9 @@ textarea.fr-code {
 }
 .fr-popup .fr-emoticon img {
   height: 20px;
+}
+.fr-popup .fr-link:focus {
+  background: #ebebeb;
 }
 
 .clearfix::after {
@@ -2260,6 +2270,7 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
 .fr-popup .fr-table-size .fr-select-table-size > span {
   display: inline-block;
   padding: 0px 4px 4px 0;
+  background: transparent;
 }
 .fr-popup .fr-table-size .fr-select-table-size > span > span {
   display: inline-block;
@@ -2267,11 +2278,9 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   height: 18px;
   border: 1px solid #dddddd;
 }
-.fr-popup .fr-table-size .fr-select-table-size > span:hover,
 .fr-popup .fr-table-size .fr-select-table-size > span.hover {
   background: transparent;
 }
-.fr-popup .fr-table-size .fr-select-table-size > span:hover > span,
 .fr-popup .fr-table-size .fr-select-table-size > span.hover > span {
   background: rgba(30, 136, 229, 0.3);
   border: solid 1px #1e88e5;
@@ -2310,23 +2319,7 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   cursor: default;
   left: 0;
 }
-.fr-popup .fr-table-colors > span.fr-selected-color::after {
-  color: #ffffff;
-  content: "\f00c";
-  font-family: FontAwesome;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 32px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  text-align: center;
-  cursor: default;
-}
-.fr-popup .fr-table-colors > span:hover,
-.fr-popup .fr-table-colors > span.fr-selected-color {
+.fr-popup .fr-table-colors > span:focus {
   outline: 1px solid #222222;
   z-index: 2;
 }
