--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -10,6 +10,9 @@
   content: "";
   height: 0;
 }
+.royal-theme:focus {
+  outline: 0;
+}
 .royal-theme.fr-box.fr-basic .fr-element {
   color: #000000;
   padding: 10px;
@@ -167,7 +170,8 @@
   color: #553982;
   padding: 8px 0;
 }
-.royal-theme.fr-popup .fr-colors-tabs .fr-colors-tab:hover {
+.royal-theme.fr-popup .fr-colors-tabs .fr-colors-tab:hover,
+.royal-theme.fr-popup .fr-colors-tabs .fr-colors-tab:focus {
   color: #553982;
 }
 .royal-theme.fr-popup .fr-colors-tabs .fr-colors-tab[data-param1="background"]::after {
@@ -198,11 +202,14 @@
   left: 0;
 }
 .royal-theme.fr-popup .fr-color-set > span:hover,
-.royal-theme.fr-popup .fr-color-set > span.fr-selected-color {
+.royal-theme.fr-popup .fr-color-set > span:focus {
   outline: 1px solid #553982;
 }
 .royal-theme .fr-drag-helper {
   background: #553982;
+}
+.royal-theme.fr-popup .fr-link:focus {
+  background: #e6e6e6;
 }
 .royal-theme .fr-file-upload-layer {
   border: dashed 2px #b7bdc0;
@@ -478,7 +485,6 @@
 .royal-theme.fr-popup .fr-table-size .fr-select-table-size > span > span {
   border: 1px solid #dddddd;
 }
-.royal-theme.fr-popup .fr-table-size .fr-select-table-size > span:hover > span,
 .royal-theme.fr-popup .fr-table-size .fr-select-table-size > span.hover > span {
   background: rgba(85, 57, 130, 0.3);
   border: solid 1px #553982;
@@ -490,16 +496,7 @@
   bottom: 0;
   left: 0;
 }
-.royal-theme.fr-popup .fr-table-colors > span.fr-selected-color::after {
-  color: #ffffff;
-  font-weight: 400;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}
-.royal-theme.fr-popup .fr-table-colors > span:hover,
-.royal-theme.fr-popup .fr-table-colors > span.fr-selected-color {
+.royal-theme.fr-popup .fr-table-colors > span:focus {
   outline: 1px solid #553982;
 }
 .royal-theme .fr-element .fr-video::after {
@@ -910,6 +907,9 @@
   font-family: Arial, Helvetica, sans-serif;
   border: 0px;
   border-top: 5px solid #553982;
+}
+.royal-theme.fr-popup .fr-input-focus {
+  background: #f5f5f5;
 }
 .royal-theme.fr-popup.fr-above {
   border-top: 0;
