Fix modal module CSS.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -524,6 +524,7 @@ iframe.fr-iframe {
 }
 body.prevent-scroll {
   overflow: hidden;
+  text-align: center;
 }
 body.prevent-scroll.fr-mobile {
   position: fixed;
