--- a/css/plugins/help.css
+++ b/css/plugins/help.css
@@ -23,6 +23,9 @@
 .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table + table {
   margin-top: 20px;
 }
+.fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tr {
+  border: 0;
+}
 .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table th,
 .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table td {
   padding: 6px 0 4px;
