--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -250,6 +250,9 @@
   bottom: 0;
   right: 0;
 }
+.dark-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tr {
+  border: 0;
+}
 .dark-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tbody tr {
   border-bottom: solid 1px #595959;
 }
